Issue #194 - continued progress on journal visibility models.

--- a/web-application/client/components/papers/view/timeline/events/controls/VisibilityControl.css
+++ b/web-application/client/components/papers/view/timeline/events/controls/VisibilityControl.css
@@ -8,3 +8,6 @@
     height: 18px;
     margin-bottom: -5px;
 }
+.event-visibility-control .visibility {
+    padding: 10px 20px;
+}
